2007-07-31  Mark Ellis <mark@mpellis.org.uk>

	* added command options for ip configuration

2007-07-04  Mark Ellis <mark@mpellis.org.uk>

	* Added support for pre WM5 devices